--- a/index.html
+++ b/index.html
@@ -28,8 +28,26 @@
             <div class="card-body">
                 <span id="timer"></span>
             </div>
-          </div>
+        </div>
 
+        <div id="question-options"></div>
+
+        <div class="card" id="question-card" style="width: 18rem;" hidden>
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
 
         <script type="text/javascript" src="./script.js"></script>
     </body>
