More early work on KnowledgeQuiz

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 
         <div id="question-options"></div>
 
-        <div class="card" id="question-card" style="width: 18rem;" hidden>
-            <img src="..." class="card-img-top" alt="...">
+        <div class="card" id="question-card" style="width: 18rem;">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR5EWvnbmisMpqLRYf4UoDzVJ-tFNAG57uXGA&usqp=CAU" class="card-img-top" alt="globe">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title" id="card-headline"></h5>
+              <p class="card-text" id="card-question"></p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
-              <li class="list-group-item">Vestibulum at eros</li>
+              <li class="list-group-item" id="card-answer-a"></li>
+              <li class="list-group-item" id="card-answer-b"></li>
+              <li class="list-group-item" id="card-answer-c"></li>
             </ul>
-            <div class="card-body">
+            <!-- <div class="card-body">
               <a href="#" class="card-link">Card link</a>
               <a href="#" class="card-link">Another link</a>
-            </div>
+            </div> -->
           </div>
 
         <script type="text/javascript" src="./script.js"></script>
