--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="question-options"></div>
 
         <div class="card" id="question-card" style="width: 18rem;">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR5EWvnbmisMpqLRYf4UoDzVJ-tFNAG57uXGA&usqp=CAU" class="card-img-top" alt="globe">
+            <img src="./assets/images/globe.jpg" class="card-img-top" alt="globe">
             <div class="card-body">
               <h5 class="card-title" id="card-headline"></h5>
               <p class="card-text" id="card-question"></p>
