working on question card management and timer

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <a class="btn btn-primary btn-lg" id="beginButton" href="#" role="button">Let's begin</a>
         </div>
 
-        <div class="card">
+        <div class="card" id="timer-card">
             <div class="card-body">
                 <span id="timer"></span>
             </div>
         </div>
 
-        <div id="question-options"></div>
+
 
         <div class="card" id="question-card" style="width: 18rem;">
-            <!-- <img src="./assets/images/globe.jpg" class="card-img-top" alt="globe"> -->
+            <img class="card-img-top" id="card-image">
             <div class="card-body">
               <h5 class="card-title" id="card-headline"></h5>
               <p class="card-text" id="card-question"></p>
