--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-        <div class="card" id="question-card" style="width: 18rem;">
+        <div class="card" id="question-card" style="width: 40rem;">
             <img class="card-img-top" id="card-image">
             <div class="card-body">
               <h5 class="card-title" id="card-headline"></h5>
@@ -42,11 +42,28 @@
               <li class="list-group-item" id="card-answer-a"></li>
               <li class="list-group-item" id="card-answer-b"></li>
               <li class="list-group-item" id="card-answer-c"></li>
+              <li class="list-group-item" id="card-answer-d"></li>
             </ul>
+            <button id="Resp1">Answer 1</button>
+            <button id="Resp2">Answer 2</button>
+            <button id="Resp3">Answer 3</button>
+            <button id="Resp4">Answer 4</button>
+
+
             <!-- <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a href="http://www.google.com" class="card-link">Answer 1</a>
+              <a href="http://www.nytimes.com" class="card-link">Answer 2</a>
+              <a href="http://www.ctpost.com" class="card-link">Answer 3</a>
+              <a href="http://www.courant.com" class="card-link">Answer 4</a>
             </div> -->
+
+              <!-- <button type="button" class="btn btn-primary">Answer A</button>
+              <button type="button" class="btn btn-success">Answer B</button>
+              <button type="button" class="btn btn-danger">Answer C</button>
+              <button type="button" class="btn btn-info">Answer D</button>
+            
+              </div> -->
+
           </div>
 
         <script type="text/javascript" src="./script.js"></script>
